fixed inventory spelling issue

--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -11,7 +11,7 @@ pihole.theblacklodge.org
 #semaphore.theblacklodge.org
 pbs.theblacklodge.org
 cloudflared.theblacklodge.org
-cloudflare-ddns.theblackldoge.org
+cloudflare-ddns.theblacklodge.org
 #rustdesk.theblacklodge.org
 
 
