added groupvars for proxmox

--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -19,3 +19,8 @@ cloudflare-ddns.theblacklodge.org
 proxmox_host
 proxmox_vms
 proxmox_lxcs
+
+[proxmox:vars]
+ansible_user: ansible
+ansible_become: true
+ansible_become_method: sudo
