--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -21,6 +21,6 @@ proxmox_vms
 proxmox_lxcs
 
 [proxmox:vars]
-ansible_user: ansible
-ansible_become: true
-ansible_become_method: sudo
+ansible_user=ansible
+ansible_become=true
+ansible_become_method=sudo
