--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,14 +1,16 @@
 [defaults]
+remote_tmp = /tmp/.ansible-${USER}
+
 # Setting the default inventory prevents needing to specify inventory.ini in every command
-inventory = ./inventory.ini
-host_key_checking = False          
-log_path = ./.logs/ansible-run.log
-stdout_callback = yaml          
-bin_ansible_callbacks = True
-deprecation_warnings = False    
+#inventory = ./inventory.ini
+#host_key_checking = False          
+#log_path = ./.logs/ansible-run.log
+#stdout_callback = yaml          
+#bin_ansible_callbacks = True
+#deprecation_warnings = False    
 
-[callback_profile_tasks]
-task_output_limit = 20
+#[callback_profile_tasks]
+#task_output_limit = 20
 
-[ssh_connection]
-ssh_args = -o StrictHostKeyChecking=accept-new
+#[ssh_connection]
+#ssh_args = -o StrictHostKeyChecking=accept-new
