--- a/ansible/updates/all-updates.yml
+++ b/ansible/updates/all-updates.yml
@@ -1,10 +1,13 @@
-- hosts: all
-  vars:
-    ansible_host_key_checking: false
-  become: true
+---
+- name: Update Debian/Ubuntu hosts
+  hosts: apt_hosts          # NEW: only the apt-capable hosts
+  become: true              # NEW: force sudo at play level
+  become_method: sudo
+  gather_facts: true
 
   tasks:
     - name: Update and upgrade apt packages
-      apt:
+      ansible.builtin.apt:
         update_cache: yes
-        upgrade: yes
+        upgrade: dist
+        autoremove: yes
