--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -21,7 +21,7 @@ proxmox_vms
 proxmox_lxcs
 
 [proxmox:vars]
-ansible_user=ansible
+#ansible_user=ansible
 ansible_become=true
 ansible_become_method=sudo
 ansible_remote_tmp=/tmp/.ansible-${USER}
