added groupvars for proxmox

--- a/ansible/updates/all-updates.yml
+++ b/ansible/updates/all-updates.yml
@@ -2,6 +2,7 @@
   vars:
     ansible_host_key_checking: false
   become: true
+  become_method: sudo
 
   tasks:
     - name: Update and upgrade apt packages
