added groupvars for proxmox

--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -22,6 +22,6 @@ proxmox_lxcs
 
 [proxmox:vars]
 ansible_user=ansible
-ansible_become=true
+ansible_become=yes
 ansible_become_method=sudo
 ansible_remote_tmp=/tmp/.ansible-${USER}
