--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -22,7 +22,8 @@ proxmox_vms
 proxmox_lxcs
 
 [proxmox:vars]
-ansible_user=ansible
+ansible_user=root
 ansible_become=true
 ansible_become_method=sudo
+ansible_become_user=root
 ansible_remote_tmp=/tmp/.ansible-${USER}
