creating dnf update

--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -24,9 +24,14 @@ proxmox_vms
 rocky_vms
 proxmox_lxcs
 
-[proxmox:vars]
-ansible_user=root
+[rocky_vms:vars]
+ansible_user=ansible
 ansible_become=true
 ansible_become_method=sudo
 ansible_become_user=root
-ansible_remote_tmp=/tmp/.ansible-${USER}
+
+[proxmox_lxcs:vars]
+ansible_user=ansible
+ansible_become=true
+ansible_become_method=sudo
+ansible_become_user=root
