--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -30,8 +30,9 @@ ansible_become=true
 ansible_become_method=sudo
 ansible_become_user=root
 
-[proxmox_lxcs:vars]
+[proxmox:vars]
 ansible_user=ansible
 ansible_become=true
 ansible_become_method=sudo
 ansible_become_user=root
+ansible_remote_tmp=/tmp/.ansible-${USER}
