creating dnf update

--- a/ansible/updates/dnf-updates.yml
+++ b/ansible/updates/dnf-updates.yml
@@ -7,8 +7,7 @@
 
   tasks:
     - name: Update and upgrade apt packages
-      dnf:
-        update_cache: yes
-        upgrade: yes
-
+      ansible.builtin.dnf:
+        name: "*"
+        state: latest
         become: true
