new relic deployment books

--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -1,12 +1,13 @@
 [proxmox_host]
 proxmox.theblacklodge.org
+proxmox-cloud.theblacklodge.org
 
 [proxmox_vms]
 docker.theblacklodge.org
 
-
 [rocky_vms]
 ipa.theblacklodge.org
+tang.theblacklodge.org
 
 [proxmox_lxcs]
 pihole.theblacklodge.org
