new relic deployment books

--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -1,6 +1,6 @@
 [proxmox_host]
 proxmox.theblacklodge.org
-proxmox-cloud.theblacklodge.org
+#proxmox-cloud.theblacklodge.org
 
 [proxmox_vms]
 docker.theblacklodge.org
