added cloud server

--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -1,9 +1,9 @@
 [proxmox_host]
 proxmox.theblacklodge.org
-#proxmox-cloud.theblacklodge.org
 
 [proxmox_vms]
 docker.theblacklodge.org
+ubuntu-cloud@theblacklodge.org
 
 [rocky_vms]
 ipa.theblacklodge.org
