added cloud server

--- a/ansible/inventories/proxmox.ini
+++ b/ansible/inventories/proxmox.ini
@@ -3,7 +3,7 @@ proxmox.theblacklodge.org
 
 [proxmox_vms]
 docker.theblacklodge.org
-cloud@theblacklodge.org
+cloud.theblacklodge.org
 
 [rocky_vms]
 ipa.theblacklodge.org
