cleaning inventories and playbooks

--- a/ansible/inventories/inventory.ini
+++ b/ansible/inventories/inventory.ini
@@ -1,19 +1,32 @@
-[k3s_servers]
-lab-k8s-1 ansible_host=192.168.50.15
+[hypervisors]
+proxmox.theblacklodge.org
 
-[k3s_agents]
-lab-k8s-2 ansible_host=192.168.50.16
-lab-k8s-3 ansible_host=192.168.50.17
+[workstations]
+austin-desktop.theblacklodge.org
 
-[k3s:children]
-k3s_servers
-k3s_agents
+[vms]
+docker.theblacklodge.org
+cloud.theblacklodge.org
+ipa.theblacklodge.org
+tang.theblacklodge.org
 
-[k8s_nodes:vars]
-ansible_user=ansible        # or whatever SSH user
+[lxcs]
+pihole.theblacklodge.org
+pangolin.theblacklodge.org
+semaphore.theblacklodge.org
+pbs.theblacklodge.org
+cloudflared.theblacklodge.org
+cloudflare-ddns.theblacklodge.org
+rustdesk.theblacklodge.org
+
+[k8s_containers]
+
+[docker_containers]
+
+[all:vars]
+ansible_user=ansible
 ansible_become=true
-ipa_realm=THEBLACKLODGE.ORG
-ipa_domain=theblacklodge.org
-ipa_server=ipa.theblacklodge.org
-ipa_join_user=kubernetes@THEBLACKLODGE.ORG
-ipa_join_password={{ipa_join_password }}
+ansible_become_method=sudo
+ansible_become_user=root
+ansible_remote_tmp=/tmp/.ansible-${USER}
+ansible_ssh_private_key_file=~/.ssh/keys/ansible@theblacklodge.org
