--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-roles_path = roles
+roles_path = ./roles
 inventory = inventories/inventory.ini
 vault_password_file = .ansible_vault_pass
 
