cleaning/centralizing docker postgres instances, building out initial cloud server deployment

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ __pycache__/
 ############################
 ansible/.artifacts/
 ansible/.logs/
+*.ansible_vault_pass
 
 ############################
 # Terraform
